tests/machine/x/pascal/outer_join.error
line: 92
error: fpc error: exit status 1
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /workspace/mochi/tests/machine/x/pascal/outer_join.pas
outer_join.pas(39,16) Error: Illegal type conversion: "{Array Of Const/Constant Open} Array of TFPGMap$2$crcA49C6E68" to "TArray$1$crcE0B4E8C7"
outer_join.pas(56,13) Error: Illegal type conversion: "{Array Of Const/Constant Open} Array of TFPGMap$2$crcDFB44C97" to "TArray$1$crc7ED07D64"
outer_join.pas(58,32) Error: Incompatible type for arg no. 2: Got "TFPGMap<System.ShortString,System.LongInt>", expected "Variant"
outer_join.pas(59,34) Error: Identifier not found "c"
outer_join.pas(63,11) Error: Identifier not found "c"
outer_join.pas(65,22) Error: identifier idents no member "customerId"
outer_join.pas(65,35) Error: Identifier not found "c"
outer_join.pas(66,41) Error: Incompatible types: got "{Array Of Const/Constant Open} Array of TFPGMap$2$crcA49C6E68" expected "TArray$1$crcE0B4E8C7"
outer_join.pas(66,35) Error: Incompatible types: got "TFPGMap<System.Variant,System.Variant>" expected "TFPGMap<System.ShortString,System.Variant>"
outer_join.pas(69,14) Error: Incompatible types: got "TArray$1$crcE0B4E8C7" expected "TArray$1$crc09D74DF2"
outer_join.pas(73,14) Error: identifier idents no member "order"
outer_join.pas(75,18) Error: identifier idents no member "customer"
outer_join.pas(77,41) Error: identifier idents no member "order"
outer_join.pas(77,71) Error: identifier idents no member "customer"
outer_join.pas(78,29) Error: identifier idents no member "order"
outer_join.pas(82,41) Error: identifier idents no member "order"
outer_join.pas(83,23) Error: identifier idents no member "order"
outer_join.pas(88,40) Error: identifier idents no member "customer"
outer_join.pas(92) Fatal: There were 18 errors compiling module, stopping
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode

